Fixed shift slot alignment

--- a/sass/pages/shifts.scss
+++ b/sass/pages/shifts.scss
@@ -34,7 +34,7 @@ div.shift-slot-box {
 }
 
 div.shift-slot-box > div {
-  flex-grow: 1;
+  width: 33%;
 }
 
 .filter.selected {
